--- a/Certification App/CanvasManifest.json
+++ b/Certification App/CanvasManifest.json
@@ -57,7 +57,7 @@
       "fluentv9controlspreview": false,
       "formuladataprefetch": true,
       "formularepair": false,
-      "generatedebugpublishedapp": false,
+      "generatedebugpublishedapp": true,
       "herocontrols": false,
       "improvedmediacapture": false,
       "improvedtabstopbehavior": false,
@@ -97,7 +97,7 @@
     "Author": "",
     "BindingErrorCount": 0,
     "ContainsThirdPartyPcfControls": false,
-    "DefaultConnectedDataSourceMaxGetRowsCount": 500,
+    "DefaultConnectedDataSourceMaxGetRowsCount": 2000,
     "DocumentAppType": "DesktopOrTablet",
     "DocumentLayoutHeight": 768,
     "DocumentLayoutLockOrientation": false,
