--- a/Certification App/Src/Responsive Mylearning Screen.fx.yaml
+++ b/Certification App/Src/Responsive Mylearning Screen.fx.yaml
@@ -2025,130 +2025,132 @@
                                         );
                                         If(
                                             ThisItem.'Has attachments',
+                                            Concurrent(
+                                                Set(
+                                                    varattach,
+                                                    false
+                                                ),
+                                                Set(
+                                                    varattach1,
+                                                    true
+                                                ),
+                                                Set(
+                                                    varattach2,
+                                                    false
+                                                ),
+                                                Set(
+                                                    varattach3,
+                                                    true
+                                                ),
+                                                Set(
+                                                    varattach4,
+                                                    false
+                                                ),
+                                                Set(
+                                                    varattach5,
+                                                    true
+                                                ),
+                                                Set(
+                                                    varattach6,
+                                                    false
+                                                ),
+                                                Set(
+                                                    varattach7,
+                                                    true
+                                                ),
+                                                Set(
+                                                    varattach8,
+                                                    false
+                                                ),
+                                                Set(
+                                                    varattach9,
+                                                    true
+                                                ),
+                                                Set(
+                                                    varattach10,
+                                                    false
+                                                ),
+                                                Set(
+                                                    varattach11,
+                                                    true
+                                                )
+                                            );
                                             Set(
                                                 varattach,
-                                                false
-                                            );
-                                            Set(
-                                                varattach1,
-                                                true
-                                            );
-                                            Set(
-                                                varattach2,
-                                                false
-                                            );
-                                            Set(
-                                                varattach3,
-                                                true
-                                            );
-                                            Set(
-                                                varattach4,
-                                                false
-                                            );
-                                            Set(
-                                                varattach5,
-                                                true
-                                            );
-                                            Set(
-                                                varattach6,
-                                                false
-                                            );
-                                            Set(
-                                                varattach7,
-                                                true
-                                            );
-                                            Set(
-                                                varattach8,
-                                                false
-                                            );
-                                            Set(
-                                                varattach9,
-                                                true
-                                            );
-                                            Set(
-                                                varattach10,
-                                                false
-                                            );
-                                            Set(
-                                                varattach11,
                                                 true
                                             ),
                                             Set(
-                                                varattach,
-                                                true
-                                            );
-                                            Set(
                                                 varattach1,
                                                 false
-                                            );
+                                            ),
                                             Set(
                                                 varattach2,
                                                 false
-                                            );
+                                            ),
                                             Set(
                                                 varattach3,
                                                 true
-                                            );
+                                            ),
                                             Set(
                                                 varattach2,
                                                 true
-                                            );
+                                            ),
                                             Set(
                                                 varattach3,
                                                 false
-                                            );
+                                            ),
                                             Set(
                                                 varattach4,
                                                 false
-                                            );
+                                            ),
                                             Set(
                                                 varattach5,
                                                 true
-                                            );
+                                            ),
                                             Set(
                                                 varattach4,
                                                 true
-                                            );
+                                            ),
                                             Set(
                                                 varattach5,
                                                 false
-                                            );
+                                            ),
                                             Set(
                                                 varattach6,
                                                 false
-                                            );
+                                            ),
                                             Set(
                                                 varattach7,
                                                 true
-                                            );
+                                            ),
                                             Set(
                                                 varattach6,
                                                 true
-                                            );
+                                            ),
                                             Set(
                                                 varattach7,
                                                 false
-                                            );
+                                            ),
                                             Set(
                                                 varattach8,
                                                 false
-                                            );
+                                            ),
                                             Set(
                                                 varattach9,
                                                 true
-                                            );
+                                            ),
                                             Set(
                                                 varattach8,
                                                 true
-                                            );
+                                            ),
                                             Set(
                                                 varattach9,
                                                 false
-                                            );
+                                            ),
                                             Set(
                                                 varattach10,
                                                 true
-                                            );
+                                            ),
                                             Set(
                                                 varattach11,
                                                 false
