--- a/Meeting Agenda App/Src/MeetingDetails Screen.fx.yaml
+++ b/Meeting Agenda App/Src/MeetingDetails Screen.fx.yaml
@@ -101,7 +101,7 @@
         Set(varShowCreateTask,false);
         Set(varShowCreateAgenda,false);
         Set(varShowPopUp,false);
-        ClearCollect(ColMeetingAgendaLists,MeetingAgendaLists);
+        //ClearCollect(ColMeetingAgendaLists,MeetingAgendaLists);
         ClearCollect(
             arrResourceList,
             LookUp(
@@ -910,7 +910,7 @@
             Gallery4 As gallery.galleryVertical:
                 AccessibleLabel: ="Gallery4"
                 Height: =50
-                Items: =LookUp(ColMeetingAgendaLists,ID=ThisItem.ID).'{Attachments}'
+                Items: =LookUp(MeetingAgendaLists,ID=ThisItem.ID).'{Attachments}'
                 Layout: =Layout.Vertical
                 ShowScrollbar: =false
                 TabIndex: =0
