--- a/Certification App/Src/App.fx.yaml
+++ b/Certification App/Src/App.fx.yaml
@@ -1,7 +1,7 @@
 App As appinfo:
     BackEnabled: =false
     OnStart: |-
-        =Set(
+        =Concurrent(Set(
             screenColor,
             RGBA(
                 215,
@@ -9,19 +9,19 @@ App As appinfo:
                 240,
                 0.3
             )
-        );
+        ),
         Set(
             bkColor,
             ColorValue("#F9F9F9")
-        );
+        ),
         Set(
             pendingColor,
             ColorValue("#D5271A")
-        );
+        ),
         Set(
             successColor,
             ColorValue("#2A9D00")
-        );
+        ),
         Set(
             headingFontSize,
             Switch(
@@ -32,7 +32,7 @@ App As appinfo:
                 15,
                 20
             )
-        );
+        ),
         Set(
             titleFontSize,
             Switch(
@@ -43,7 +43,7 @@ App As appinfo:
                 10,
                 13
             )
-        );
+        ),
         Set(
             SubtitleFontSize,
             Switch(
@@ -54,7 +54,7 @@ App As appinfo:
                 9,
                 11
             )
-        );
+        ),
         Set(
             DescFontSize,
             Switch(
@@ -65,19 +65,19 @@ App As appinfo:
                 7,
                 10
             )
-        );
+        ),
         Set(
             varMngrname,
             Office365Users.ManagerV2(Office365Users.MyProfile().Mail).displayName
-        );
+        ),
         Set(
             MyProfile,
             Office365Users.MyProfile()
-        );
+        ),
         Set(
             MyUserId,
             MyProfile.Id
-        );
+        ));
         Set(
             varUserLevel,
             If(
