--- a/Certification App/Src/App.fx.yaml
+++ b/Certification App/Src/App.fx.yaml
@@ -1,83 +1,84 @@
 App As appinfo:
     BackEnabled: =false
     OnStart: |-
-        =Concurrent(Set(
-            screenColor,
-            RGBA(
-                215,
-                223,
-                240,
-                0.3
-            )
-        ),
-        Set(
-            bkColor,
-            ColorValue("#F9F9F9")
-        ),
-        Set(
-            pendingColor,
-            ColorValue("#D5271A")
-        ),
-        Set(
-            successColor,
-            ColorValue("#2A9D00")
-        ),
-        Set(
-            headingFontSize,
-            Switch(
-                'Responsive Home Screen'.Size,
-                ScreenSize.Small,
-                12,
-                ScreenSize.Medium,
-                15,
-                20
-            )
-        ),
-        Set(
-            titleFontSize,
-            Switch(
-                'Responsive Home Screen'.Size,
-                ScreenSize.Small,
-                9,
-                ScreenSize.Medium,
-                10,
-                13
-            )
-        ),
-        Set(
-            SubtitleFontSize,
-            Switch(
-                'Responsive Home Screen'.Size,
-                ScreenSize.Small,
-                8,
-                ScreenSize.Medium,
-                9,
-                11
-            )
-        ),
-        Set(
-            DescFontSize,
-            Switch(
-                'Responsive Home Screen'.Size,
-                ScreenSize.Small,
-                5,
-                ScreenSize.Medium,
-                7,
-                10
-            )
-        ),
-        Set(
-            varMngrname,
-            Office365Users.ManagerV2(Office365Users.MyProfile().Mail).displayName
-        ),
-        Set(
-            MyProfile,
-            Office365Users.MyProfile()
-        ),
-        Set(
-            MyUserId,
-            MyProfile.Id
-        ));
+        =Concurrent(
+            Set(
+                screenColor,
+                RGBA(
+                    215,
+                    223,
+                    240,
+                    0.3
+                )
+            ),
+            Set(
+                bkColor,
+                ColorValue("#F9F9F9")
+            ),
+            Set(
+                pendingColor,
+                ColorValue("#D5271A")
+            ),
+            Set(
+                successColor,
+                ColorValue("#2A9D00")
+            ),
+            Set(
+                headingFontSize,
+                Switch(
+                    'Responsive Home Screen'.Size,
+                    ScreenSize.Small,
+                    12,
+                    ScreenSize.Medium,
+                    15,
+                    20
+                )
+            ),
+            Set(
+                titleFontSize,
+                Switch(
+                    'Responsive Home Screen'.Size,
+                    ScreenSize.Small,
+                    9,
+                    ScreenSize.Medium,
+                    10,
+                    13
+                )
+            ),
+            Set(
+                SubtitleFontSize,
+                Switch(
+                    'Responsive Home Screen'.Size,
+                    ScreenSize.Small,
+                    8,
+                    ScreenSize.Medium,
+                    9,
+                    11
+                )
+            ),
+            Set(
+                DescFontSize,
+                Switch(
+                    'Responsive Home Screen'.Size,
+                    ScreenSize.Small,
+                    5,
+                    ScreenSize.Medium,
+                    7,
+                    10
+                )
+            ),
+            Set(
+                varMngrname,
+                Office365Users.ManagerV2(Office365Users.MyProfile().Mail).displayName
+            ),
+            Set(
+                MyProfile,
+                Office365Users.MyProfile()
+            ));
+            Set(
+                MyUserId,
+                MyProfile.Id
+        );
         Set(
             varUserLevel,
             If(
