--- a/Certification App/Src/Responsive Mylearning Screen.fx.yaml
+++ b/Certification App/Src/Responsive Mylearning Screen.fx.yaml
@@ -2031,54 +2031,56 @@
                                         );
                                         If(
                                             ThisItem.'Has attachments',
-                                            Concurrent(Set(
-                                                varattach,
-                                                false
+                                            Concurrent(
+                                                Set(
+                                                    varattach,
+                                                    false
+                                                ),
+                                                Set(
+                                                    varattach1,
+                                                    true
+                                                ),
+                                                Set(
+                                                    varattach2,
+                                                    false
+                                                ),
+                                                Set(
+                                                    varattach3,
+                                                    true
+                                                ),
+                                                Set(
+                                                    varattach4,
+                                                    false
+                                                ),
+                                                Set(
+                                                    varattach5,
+                                                    true
+                                                ),
+                                                Set(
+                                                    varattach6,
+                                                    false
+                                                ),
+                                                Set(
+                                                    varattach7,
+                                                    true
+                                                ),
+                                                Set(
+                                                    varattach8,
+                                                    false
+                                                ),
+                                                Set(
+                                                    varattach9,
+                                                    true
+                                                ),
+                                                Set(
+                                                    varattach10,
+                                                    false
+                                                ),
+                                                Set(
+                                                    varattach11,
+                                                    true
+                                                )
                                             ),
-                                            Set(
-                                                varattach1,
-                                                true
-                                            ),
-                                            Set(
-                                                varattach2,
-                                                false
-                                            ),
-                                            Set(
-                                                varattach3,
-                                                true
-                                            ),
-                                            Set(
-                                                varattach4,
-                                                false
-                                            ),
-                                            Set(
-                                                varattach5,
-                                                true
-                                            ),
-                                            Set(
-                                                varattach6,
-                                                false
-                                            ),
-                                            Set(
-                                                varattach7,
-                                                true
-                                            ),
-                                            Set(
-                                                varattach8,
-                                                false
-                                            ),
-                                            Set(
-                                                varattach9,
-                                                true
-                                            ),
-                                            Set(
-                                                varattach10,
-                                                false
-                                            ),
-                                            Set(
-                                                varattach11,
-                                                true
-                                            )),
                                             Set(
                                                 varattach,
                                                 true
